<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
    android:background="@color/white"
    android:paddingTop="15dip"
    android:paddingLeft="10dip"
    android:paddingRight="10dip">
           <TextView
           android:id="@+id/textView1"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/up_base_info"
           android:textSize="@dimen/normal_one_text_size" />
       <!-- 服务器IP -->
		 <LinearLayout
	       android:layout_width="match_parent"
	       android:layout_height="wrap_content"
	       android:id="@+id/up_linear1" 
	       android:orientation="horizontal"
	       android:layout_marginLeft="40dp">
		        <TextView
		           android:id="@+id/textView2"
		           android:layout_width="wrap_content"
		           android:layout_height="wrap_content"
		           android:text="@string/up_service_ip"
		           android:textSize="@dimen/normal_two_text_size" />
		
		     <TextView
		           android:id="@+id/textView_up_ip"
		           android:layout_width="wrap_content"
		           android:layout_height="wrap_content"
		         
		           android:textSize="@dimen/normal_two_text_size" />		
        </LinearLayout>
        
        <LinearLayout
	       android:layout_width="match_parent"
	       android:layout_height="wrap_content"
	       android:id="@+id/up_linear2" 
	       android:orientation="horizontal"
	       android:layout_marginLeft="40dp">
		        <TextView
		           android:id="@+id/textView4"
		           android:layout_width="wrap_content"
		           android:layout_height="wrap_content"
		           android:text="@string/up_pda_code"
		           android:textSize="@dimen/normal_two_text_size" />
		
		     <TextView
		           android:id="@+id/textView_up_pda_code"
		           android:layout_width="wrap_content"
		           android:layout_height="wrap_content"
		          
		           android:textSize="@dimen/normal_two_text_size" />		
        </LinearLayout>
        <LinearLayout
	       android:layout_width="match_parent"
	       android:layout_height="wrap_content"
	       android:id="@+id/up_linear3" 
	       android:orientation="horizontal"
	       android:layout_marginLeft="40dp">
		        <TextView
		           android:id="@+id/textView6"
		           android:layout_width="wrap_content"
		           android:layout_height="wrap_content"
		           android:text="@string/up_pda_ip"
		           android:textSize="@dimen/normal_two_text_size" />
		
		     <TextView
		           android:id="@+id/textView_up_pda_ip"
		           android:layout_width="wrap_content"
		           android:layout_height="wrap_content"
		          
		           android:textSize="@dimen/normal_two_text_size" />		
        </LinearLayout>
        <LinearLayout
	       android:layout_width="match_parent"
	       android:layout_height="wrap_content"
	       android:id="@+id/up_linear4" 
	       android:orientation="horizontal"
	       android:layout_marginLeft="40dp">
		        <TextView
		           android:id="@+id/textView8"
		           android:layout_width="wrap_content"
		           android:layout_height="wrap_content"
		           android:text="@string/up_pda_mac"
		           android:textSize="@dimen/normal_two_text_size" />
		
		     <TextView
		           android:id="@+id/textView_up_pda_mac"
		           android:layout_width="wrap_content"
		           android:layout_height="wrap_content"
		          
		           android:textSize="@dimen/normal_two_text_size" />		
        </LinearLayout>
         <LinearLayout
	       android:layout_width="match_parent"
	       android:layout_height="wrap_content"
	       android:id="@+id/up_linear5" 
	       android:orientation="horizontal"
	       android:layout_marginLeft="40dp">		     
		     <CheckBox
		           android:id="@+id/checkbox_up_auto_up"
		           android:layout_width="wrap_content"
		           android:layout_height="wrap_content"
		           android:text="@string/up_auto_up"
		          
		           android:textSize="@dimen/normal_two_text_size" />		
        </LinearLayout>
        <LinearLayout
	       android:layout_width="match_parent"
	       android:layout_height="wrap_content"
	       android:id="@+id/up_linear15" 
	       android:orientation="horizontal"
	       android:layout_marginLeft="40dp">		     
		     <CheckBox
		           android:id="@+id/uped_delete_checkbox1"
		           android:layout_width="wrap_content"
		           android:layout_height="wrap_content"
		           android:text="@string/up_uped_delete"
		          
		           android:textSize="@dimen/normal_two_text_size"/>		
        </LinearLayout>
          <TextView
		           android:id="@+id/textView10"
		           android:layout_width="wrap_content"
		           android:layout_height="wrap_content"
		           android:text="@string/up_type"
		           android:textSize="@dimen/normal_one_text_size" />
		 <LinearLayout
	       android:layout_width="match_parent"
	       android:layout_height="wrap_content"	       
	       android:orientation="vertical"
	        android:layout_marginLeft="40dp"
	      >		     
		    <RadioGroup
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="vertical" 
		        android:id="@+id/up_group"		        
		        android:gravity="left"
		        android:padding="1dp">
		        <RadioButton
		            android:id="@+id/up_radioButton1"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content" 
		            android:text="@string/up_type_xj"
		            android:textSize="@dimen/normal_two_text_size"
		            />
		
		        <RadioButton
		            android:id="@+id/up_radioButton2"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"		           
		            android:text="@string/up_type_temp"
		            android:textSize="@dimen/normal_two_text_size"
		           />
		
		        <RadioButton
		            android:id="@+id/up_radioButton3"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"		           
		           android:text="@string/up_type_id"
		           android:textSize="@dimen/normal_two_text_size"
		            />
		         <RadioButton
		            android:id="@+id/up_radioButton4"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"		           
		           android:text="@string/up_type_pda_info"
		           android:textSize="@dimen/normal_two_text_size"
		            />
		</RadioGroup> 	
        </LinearLayout>
         <LinearLayout
	       android:layout_width="match_parent"
	       android:layout_height="wrap_content"	       
	       android:orientation="vertical"
	        android:layout_marginLeft="40dp"
	        android:gravity="center"
	      >	
	      <Button 
	          android:id="@+id/up_up"
	          android:layout_width="wrap_content"
		      android:layout_height="wrap_content"
		      android:text="@string/up_up"
		      android:textSize="@dimen/button_text_size"	/>	  
	       </LinearLayout>

</LinearLayout>
