<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:id="@+id/unitcheck"
    >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/curent_info" 
        android:layout_marginLeft="40dp"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/x"
        android:layout_marginLeft="40dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />
<LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" 
	        android:orientation="horizontal">
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/y"
        android:layout_marginLeft="40dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    <TextView
	        android:id="@+id/tips1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/measurement_countdown"	        
	        android:layout_marginRight="10dp"/>
    </LinearLayout>
	<LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" 
	        android:orientation="horizontal">"
	    
	    <TextView
	        android:id="@+id/textView3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/z"
	        android:layout_marginLeft="40dp"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	    <TextView
	        android:id="@+id/tips2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/measurement_countdown"	        
	        android:layout_marginRight="10dp" />
	
	</LinearLayout>
<RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
			        >
   <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:button="@null"
        android:background="@color/green"
        android:layout_weight="1" 
        android:layout_marginLeft="40dp"/>

    <RadioButton
        android:id="@+id/radioButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:button="@null"
        android:background="@color/yellow" 
        android:layout_weight="1"/>

    <RadioButton
        android:id="@+id/radioButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:button="@null"
        android:background="@color/orange"
        android:layout_weight="1" />

    <RadioButton
        android:id="@+id/radioButton5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:button="@null"
        android:background="@color/red"
        android:layout_weight="1" 
        android:layout_marginRight="40dp"/>
</RadioGroup>
    

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
    <EditText
        android:id="@+id/position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/position"        
        android:numeric="integer"
        android:editable="false"
        android:singleLine="true" 
        android:layout_marginLeft="25dp" 
     />

    <Button
        android:id="@+id/direction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/direction"
        />

    <Button
        android:id="@+id/measurement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/measurement" />

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_item" 
        android:layout_marginRight="25dp"/>
    </LinearLayout>

    

</LinearLayout>
