<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
     >
       
    <include layout="@layout/top_navitation"/>
	<FrameLayout 
	    android:id="@+id/fragment_content"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_weight="1"/>
	
	<RelativeLayout
	    android:id="@+id/bottom_line"
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="bottom|center"
	    android:background="@drawable/top_item_selected"
	    >

	    <Button
		    android:id="@+id/bottombutton_pre"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/pre_item" 		   
		    android:layout_marginLeft="1dp"
		    android:layout_alignParentLeft="true"/>  		

		<Button
		    android:id="@+id/bottombutton3"
		    android:layout_width="150dp"
		    android:layout_height="wrap_content"
		    android:text="@string/measurement"
		    android:layout_weight="1" 
		    android:layout_centerInParent="true"/>
		<Button
		    android:id="@+id/next"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/next_item"
		    android:layout_marginRight="1dp"
		    android:layout_alignParentRight="true"/>
	    
	</RelativeLayout>
</LinearLayout>
